--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "@react-navigation/native": "^5.0.0",
     "@react-navigation/stack": "^5.0.0",
     "@react-navigation/web": "~1.0.0-alpha.9",
+    "apollo-boost": "^0.4.7",
     "expo": "~37.0.3",
     "expo-asset": "~8.1.3",
     "expo-constants": "~9.0.0",
     "expo-font": "~8.1.0",
     "expo-web-browser": "~8.1.0",
+    "graphql": "^15.0.0",
+    "graphql-tag": "^2.10.3",
     "react": "~16.9.0",
+    "react-apollo": "^3.1.4",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.0.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
