--- a/app.json
+++ b/app.json
@@ -5,10 +5,10 @@
     "platforms": ["ios", "android", "web"],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./src/assets/images/icon.png",
+    "icon": "./assets/logo/logo_3.png",
     "scheme": "myapp",
     "splash": {
-      "image": "./src/assets/images/splash.png",
+      "image": "./assets/logo/logo_3.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
